:sparkles: feat: create comments in the userController to removeCurrentUser to generate swagger.js correct
